# c-api-tools

./: Cargo.toml  README.md  RELEASE.md
.github/workflows/: run-tests.yml  run-weekly-tests.yml  style-checks.yml
c-api-tools-macros/: Cargo.toml  README.md
c-api-tools-macros/src/: attribute_c_wrappers.rs  attribute_concretise_types.rs  derive_c_wrappers.rs  eval_concrete_type.rs  lib.rs
example_project/: Cargo.toml  bindings.h  build.rs  cbindgen.toml
example_project/src/: lib.rs
src/: lib.rs  types.rs
